--- a/frontend/app/components/sitegroups/details/sitegroups-details.component.html
+++ b/frontend/app/components/sitegroups/details/sitegroups-details.component.html
@@ -62,8 +62,14 @@
                             <button class="btn btn-success float-left" [routerLink]="['site']"><i class="fa fa-plus-circle"></i>&nbsp;Ajouter {{module.forms.site.label}}</button>
                             <button class="btn btn-success float-left ml-2" *ngIf="module.forms.sitegroup.use_batch_visit_creation" [disabled]="sites.length < 1" (click)="onClickBatchVisit()">Ajouter une visite pour chaque {{module.forms.site.label}}</button>
                             <button disabled class="btn btn-primary float-right ml-2"><i class="fa fa-arrow-down"></i>&nbsp;Export</button>
-                            <button disabled class="btn btn-primary float-right"><i class="fa fa-sliders"></i>&nbsp;Filtrer</button>
+                            <button class="btn btn-primary float-right" (click)="filterSiteDisplay = !filterSiteDisplay"><i class="fa fa-sliders"></i>&nbsp;Filtrer</button>
                         </div>
+                        <gn-cmr-filter *ngIf="module.forms.site.search_filters.length > 0"
+                            [class]="filterSiteDisplay == true? 'd-block' : 'd-none'"
+                            [filters]="module.forms.site.search_filters" 
+                            [fieldsDef]="siteFieldsDef" 
+                            (onSearch)="applySiteSearch($event)"
+                        ></gn-cmr-filter>
                         <ngx-datatable #tableSite
                             class="material striped margin-top-xs"
                             [rows]="sites"
@@ -75,7 +81,8 @@
                             [footerHeight]="50"
                             [selectionType]="'single'"
                             [selected]="selected"
-                            (activate)="onSiteRowClick($event)">
+                            (activate)="onSiteRowClick($event)"
+                            [messages]="{emptyMessage: 'Aucune donnée disponible', totalMessage: 'Total', selectedMessage: 'sélectionné'}">
 
                             <ngx-datatable-column width="20" headerClass="col-warning" cellClass="col-warning">
                                 <ng-template let-row="row" ngx-datatable-cell-template>
