Export: add export of all observation from a sitegroup as shapefile

--- a/frontend/app/components/sitegroups/details/sitegroups-details.component.html
+++ b/frontend/app/components/sitegroups/details/sitegroups-details.component.html
@@ -170,7 +170,7 @@
             <div>
                 <button mat-raised-button (click)="downloadAllObservations('csv')" type="button" class="button-success mr-1" >Format CSV</button>
                 <button mat-raised-button (click)="downloadAllObservations('geojson')" type="button" class="button-success mr-1" >Format GeoJSON</button>
-                <button mat-raised-button disabled (click)="getCsvObservations('shp')" type="button" class="button-success mr-1" >Format ShapeFile</button>
+                <button mat-raised-button (click)="downloadAllObservations('shp')" type="button" class="button-success mr-1" >Format ShapeFile</button>
             </div>
         </div>
       </ng-template>
