--- a/frontend/app/components/individuals/details/individual-details.component.html
+++ b/frontend/app/components/individuals/details/individual-details.component.html
@@ -3,7 +3,7 @@
         <gn-cmr-breadcrumb [path]="path" [currentPage]="module.forms.individual.label + ': ' + individual.identifier"></gn-cmr-breadcrumb>
         <div class="toolbar clearfix">
             <h3 class="float-left">{{module.forms.individual.label}}: {{individual.identifier}}</h3>
-            <button class="btn btn-primary float-right ml-2" (click)="getFicheIndividual()"><i class="fa fa-file-pdf-o"></i>&nbsp;Télécharger la fiche</button>
+            <button class="btn btn-primary float-right ml-2" (click)="openModalDownload($event, modalDownload)"><i class="fa fa-arrow-down"></i>&nbsp;Exports</button>
             <button class="btn btn-primary float-right ml-2" [routerLink]="['..', {edit: individual.id_individual}]"><i class="fa fa-pencil"></i>&nbsp;Editer</button>
         </div>
         <div class="">
@@ -98,4 +98,22 @@
             </nav>
         </div>
     </div>
+    <ng-template #modalDownload id="modal-download" let-c="close" let-d="dismiss" >
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel"> {{'DownloadData' | translate }}</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="modalReference.close()">
+              <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <div class="alert alert-warning">
+                <i class="fa fa-warning"></i>&nbsp;Assurez-vous d'avoir positionné la carte telle que vous voulez l'afficher dans la fiche!
+            </div>
+            <br>
+            <div>
+                <button mat-raised-button (click)="getFicheIndividual()" type="button" class="button-success mr-1" ><i class="fa fa-file-pdf-o"></i>&nbsp;Fiche individu</button>
+                <button mat-raised-button disabled (click)="getMediaZip()" type="button" class="button-success mr-1" >Médias</button>
+            </div>
+        </div>
+      </ng-template>
 </div>
