--- a/frontend/app/components/sites/details/site-details.component.html
+++ b/frontend/app/components/sites/details/site-details.component.html
@@ -6,6 +6,7 @@
                 <gn-cmr-breadcrumb [path]="path" [currentPage]="module.forms.site.label + ': ' + site.name"></gn-cmr-breadcrumb>
                 <div class="toolbar clearfix">
                     <h3 class="float-left">{{module.forms.site.label}}: {{ site.name }}</h3>
+                    <button class="btn btn-danger float-right ml-2" (click)="openModalDownload($event, modalDelete)"><i class="fa fa-trash"></i>&nbsp;Supprimer</button>
                     <button class="btn btn-primary float-right" [routerLink]="['..', {edit: site.id_site}]"><i class="fa fa-pencil"></i>&nbsp;Editer</button>
                 </div>
                 <div class="">
@@ -141,4 +142,22 @@
             </nav>
         </div>
     </div>
+    <ng-template #modalDelete id="modal-delete" let-c="close" let-d="dismiss">
+        <div class="modal-header">
+            <h5 class="modal-title">Attention</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="modalReference.close()">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <p *ngIf="site.nb_visits">Impossible de supprimer! Cet élément contient {{site.nb_visits}} {{module.forms.visit.label_plural}}</p>
+            <div class="alert alert-danger" *ngIf="!site.nb_visits">
+                <i class="fa fa-warning fa-lg"></i>&nbsp;Êtes-vous sur de supprimer l'élément {{module.forms.site.label}} {{site.name}}?
+            </div>
+        </div>
+        <div class="modal-footer button-container">
+            <button class="btn btn-primary" (click)="modalReference.close()">Annuler</button>
+            <button class="btn btn-danger ml-5" [disabled]="site.nb_visits" (click)="deleteSite()">Confirmer la suppression</button>
+        </div>
+    </ng-template>
 </div>
