--- a/frontend/app/components/modules/list/module-list.component.html
+++ b/frontend/app/components/modules/list/module-list.component.html
@@ -1,5 +1,10 @@
 <div class="main cadre">
     <h2>Modules de Capture-Marquage-Recapture</h2>
+    <p class="font-italic" *ngIf="!modules.length">
+        <br><br>
+        Désolé, vous n'avez accès à aucun module de CMR.<br>
+        Veuillez contacter l'administrateur du site.
+    </p>
     <div class="container py-5">
         <div class="row">
             <div class="col-4 col-sm-5" *ngFor="let module of modules">
